fix(accordion): trigger icon alignment is incorrect (#DS-3940)

--- a/packages/components/accordion/accordion-trigger.component.scss
+++ b/packages/components/accordion/accordion-trigger.component.scss
@@ -10,6 +10,8 @@
     & .kbq-accordion-trigger__icon {
         box-sizing: initial;
 
+        align-self: flex-start;
+
         padding: var(--kbq-size-xxs);
 
         transition: transform 300ms ease-out;
